<resources>
    <string name="app_name">interfejsRNAFrabase</string>
    <string name="search">Search</string>
    <string name="structural">Structural elements</string>
    <string name="secondary">Secondary structures</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="residue">Residue</string>
    <string name="base">Base pair</string>
    <string name="multi">Multiplet</string>
    <string name="dinucl">Dinucl. step</string>
    <string name="stem">Stem</string>
    <string name="links">Links</string>
    <string name="loop">Loop</string>
    <string name="seq">Sequence(s) and / or secondary structure(s):</string>
    <string name="plik">File</string>
    <string name="adv_search">Advanced Search</string>
    <string name="insert">Insert here</string>
    <string name="contact">Contact us</string>
    <string name="title_activity_advanced_search">AdvancedSearchActivity</string>
    <string name="limits">
            ta dziwna tabelka
            blablba
            blablahswjqnaoisoi
        wncssjdfncjmd
        jesncfndenden
        ndcnfdrjejw
        qjksbd
        mdnbfjk
        sndbkwjend
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_new">New</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_residue">Residue</string>
    <string name="title_activity_basepair">Basepair</string>
    <string name="title_activity_multiplet">Multiplet</string>
    <string name="title_activity_dinucl_step">DinuclStep</string>
    <string name="title_activity_stem">Stem</string>
    <string name="title_activity_loop">Loop</string>
    <string name="title_activity_secondary_struct">SecondaryStruct</string>
    <string name="example1"><![CDATA[
    #tRNA(Phe), yeast (Saccharomyces Scerevisiae) <br />
    >strand1 <br />
    gCGGAUUUAgCUCAGuuGGGAGAGCgCCAGAcUgAAgAucUGGAGgUCcUGUGuuCGaUCCACAGAAUUCGCACCA
    ]]></string>
    <string name="example2"><![CDATA[
    #GNRA hairpin loop with 3 base pairs<br />
    >strand1<br />
    GAGGNRACUC<br />
    (((....)))
    ]]></string>
    <string name="example3"><![CDATA[
    #Bulge<br />
    >strand1 <br />
    NNNANNN <br />
    (((.((( <br />
    >strand2 <br />
    NNNNNN <br />
    ))))))
    ]]></string>
    <string name="example4"><![CDATA[
    #Non symmetrical internal loop <br />
    >strand1 <br />
    (((...((( <br />
    >strand2 <br />
    )))..))) <br />
    ]]></string>
    <string name="example5"><![CDATA[
    #Three-way junction <br />
    >strand1 <br />
    (((((( <br />
    >strand2 <br />
    )))....((( <br />
    >strand3 <br />
    )))...))) <br />

    ]]></string>
    <string name="example6"><![CDATA[
    #Kissing loops <br />
    >strand1 <br />
    (((.[[[[[[))) <br />
    >strand2 <br />
    (((.]]]]]]))) <br />

    ]]></string>

        <string name="glowny"><![CDATA[
        <b>RNA FRABASE:</b> an engine with database to search the three-dimensional
        fragments within 3D RNA structures using as an input the sequence(s) and / or
        secondary structure(s) given in the dot-bracket notation
        ]]></string>
    <string name="table"><![CDATA[
    #Strand named: &emsp; strand1 <br />
    #residue numbers: &emsp; 1-13 <br />
    #Strand named: &emsp; strand2 <br />
    #residue numbers: &emsp; 14-26 <br />
    #no &emsp; angle &emsp min	max <br />
    #all &emsp; alpha &emsp; -180 &emsp; 180 <br />
    #all &emsp; beta &emsp; -180 &emsp; 180 <br />
    #all &emsp; gamma &emsp; -180 &emsp; 180 <br />
    #all &emsp; delta &emsp; -180 &emsp; 180 <br />
    #all &emsp; epsilon &emsp; -180 &emsp; 180 <br />
    #all &emsp; zeta &emsp; -180 &emsp; 180 <br />
    #all &emsp; chi &emsp; -180 &emsp; 180 <br />
    #all &emsp; p &emsp; -180 &emsp; 180 <br />
    #all &emsp; vmax &emsp; -180 &emsp; 180 <br />
    #all &emsp; v0 &emsp; -180 &emsp; 180 <br />
    #all &emsp; v1 &emsp; -180 &emsp; 180 <br />
    #all &emsp; v2 &emsp; -180 &emsp; 180 <br />
    #all &emsp; v3 &emsp; -180 &emsp; 180 <br />
    #all &emsp; v4 &emsp; -180 &emsp; 180 <br />
    #all &emsp; eta &emsp; -180 &emsp; 180 <br />
    #all &emsp; theta &emsp; -180 &emsp; 180 <br />

    ]]></string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_links">Links</string>
    <string name="title_activity_contact">Contact</string>

</resources>
