<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.user.interfejsrnafrabase.MainActivity">
    <item
        android:id="@+id/menu_search"
        android:orderInCategory="100"
        android:title="@string/search" />
    <item
        android:id="@+id/menu_structural"
        android:orderInCategory="100"
        android:title="@string/structural"
        app:showAsAction="never">

        <menu>
            <item
                android:id="@+id/menu2_residue"
                android:title="@string/residue"
                app:showAsAction="never" />
            <item
                android:id="@+id/menu2_base"
                android:title="@string/base"
                app:showAsAction="never" />
            <item
                android:id="@+id/menu2_multi"
                android:title="@string/multi"
                app:showAsAction="never" />
            <item
                android:id="@+id/menu2_dinucl"
                android:title="@string/dinucl"
                app:showAsAction="never" />
            <item
                android:id="@+id/menu2_stem"
                android:title="@string/stem"
                app:showAsAction="never" />
            <item
                android:id="@+id/menu2_loop"
                android:title="@string/loop"
                app:showAsAction="never" />

        </menu>



    </item>
    <item
        android:id="@+id/menu_secondary"
        android:orderInCategory="100"
        android:title="@string/secondary"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_help"
        android:orderInCategory="100"
        android:title="@string/help"
        app:showAsAction="never" />
    <item
    android:id="@+id/menu_about"
    android:orderInCategory="100"
    android:title="@string/about"
    app:showAsAction="never" />
    <item
        android:id="@+id/menu_contact"
        android:orderInCategory="100"
        android:title="@string/contact"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_links"
        android:orderInCategory="100"
        android:title="@string/links"
        app:showAsAction="never" />
</menu>
