<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">


    <Button
        android:text="@string/adv_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/adv_search_button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/search_button"
        android:layout_marginBottom="18dp"
        android:layout_above="@+id/adv_search_button"
        android:layout_alignStart="@+id/insert" />

    <TextView
        android:text="@string/seq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:editable="false"
        android:layout_above="@+id/choose_button"
        android:layout_alignEnd="@+id/adv_search_button"
        android:layout_marginBottom="26dp" />

    <TextView
        android:text="@string/plik"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/insert"
        android:editable="true"
        android:layout_alignBaseline="@+id/choose_button"
        android:layout_alignBottom="@+id/choose_button"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/insert"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_marginBottom="72dp"
        android:layout_above="@+id/search_button"
        android:layout_alignStart="@+id/textView"
        android:layout_marginStart="26dp" />

    <Button
        android:text="Choose file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/choose_button"
        android:layout_marginBottom="12dp"
        android:layout_above="@+id/editText"
        android:layout_alignStart="@+id/textView" />

    <TextView
        android:text="Examples"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="14dp"
        android:id="@+id/textView"
        android:layout_above="@+id/search_button"
        android:layout_toStartOf="@+id/adv_search_button"
        android:layout_marginBottom="29dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layout_alignBottom="@+id/textView"
        android:layout_alignStart="@+id/search_button" />

</RelativeLayout>